--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.16.0
   video_player: ^2.8.2
   video_player_web: ^2.1.3
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
